yew-macro/tests/macro/html-list-fail.stderr
error: this opening tag has no corresponding closing tag
 --> $DIR/html-list-fail.rs:4:13
  |
4 |     html! { <> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this closing tag has no corresponding opening tag
 --> $DIR/html-list-fail.rs:5:13
  |
5 |     html! { </> };
  |             ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening tag has no corresponding closing tag
 --> $DIR/html-list-fail.rs:6:13
  |
6 |     html! { <><> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this closing tag has no corresponding opening tag
 --> $DIR/html-list-fail.rs:7:13
  |
7 |     html! { </></> };
  |             ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening tag has no corresponding closing tag
 --> $DIR/html-list-fail.rs:8:13
  |
8 |     html! { <><></> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
 --> $DIR/html-list-fail.rs:9:18
  |
9 |     html! { <></><></> };
  |                  ^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a valid html element
  --> $DIR/html-list-fail.rs:10:15
   |
10 |     html! { <>invalid</> };
   |               ^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected an expression following this equals sign
  --> $DIR/html-list-fail.rs:11:17
   |
11 |     html! { <key=></>}
   |                 ^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening tag has no corresponding closing tag
  --> $DIR/html-list-fail.rs:12:13
   |
12 |     html! { <key="key".to_string()>invalid</key>}
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
